# airflow-dev

./: compose.yaml  pyproject.toml  restart-airflow.sh
.github/workflows/: init_and_deploy.yaml
dags/: 02-email-operator.py  03-printname-operator.py  03-python-operator.py  04-preprocess_workflow.py
data/logs/: log-241012.txt  log-241015.txt  log-241019.txt  log-241025.txt
data/spark/: log-generator-config.yaml
experiments/: insert_to_db.py
experiments/ml/: generate_data.py  model.py
experiments/rl/: dqn.py
experiments/spark/practice-01/: 01-word-count.py  02-word-count-rdd.py  03-word-count-spark-sql.py
experiments/spark/practice-02/: 04-log-analysis-rdd.py
experiments/spark/practice-03/: 05-join.py
experiments/spark/practice-04/: 06-DataFrame.py
plugins/common/: insert_to_db.py  read_logs.py
workflows/: init_and_deploy.yaml
