[tool.poetry]
name = "airflow-practice"
version = "0.1.0"
description = ""
authors = ["kimkeonhyo <rjsgy033@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pyspark = "^3.5.3"
torch = "^2.5.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
